# screen-paws

./: README.md  pyproject.toml
src/screen_pause/: __init__.py  app.py  utils.py
src/screen_pause.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: README.md  test_utils.py
